--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "laravel-admin-ext/bzones",
-    "description": "Dynamic tree-like zones(country, provinces, etc) panel and service.",
+    "description": "Laravel-admin extension which is a dynamic tree-like zones(country, provinces, etc) panel and service.",
     "type": "library",
     "keywords": ["laravel-admin", "extension", "bikaraan", "zones"],
     "homepage": "https://github.com/laravel-admin-ext/bzones",
@@ -21,7 +21,8 @@
         "php": ">=8.1",
         "encore/laravel-admin": "^1.6|dev-master@dev",
         "spatie/laravel-activitylog": "^4.7",
-        "laravel-admin-ext/grid-sortable": "dev-master@dev"
+        "laravel-admin-ext/grid-sortable": "dev-master@dev",
+        "kalnoy/nestedset": "^6.0"
     },
     "autoload": {
         "psr-4": {
