--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "laravel-admin-ext/bzones",
-    "description": "Laravel-admin extension which is a dynamic tree-like zones(country, provinces, etc) panel and service.",
+    "description": "bCore extension which is a dynamic tree-like zones(country, provinces, etc) panel and service.",
     "type": "library",
-    "keywords": ["laravel-admin", "extension", "bikaraan", "zones"],
+    "keywords": ["bcore", "extension", "bikaraan", "zones"],
     "homepage": "https://github.com/laravel-admin-ext/bzones",
     "license": "MIT",
     "authors": [
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": ">=8.1",
-        "encore/laravel-admin": "^1.6|dev-master@dev",
+        "bikaraan/bcore": "dev-main",
         "spatie/laravel-activitylog": "^4.7",
         "laravel-admin-ext/grid-sortable": "dev-master@dev",
         "kalnoy/nestedset": "^6.0"
